<resources>
    <string name="app_name">The Hanoi Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hanoi_greeting">Hà Nội, Việt nam</string>
    <string name="hotel_tittle">Khách sạn</string>
    <string name="atm_tittle">ATM</string>
    <string name="hospital_tittle">Bệnh viện</string>
    <string name="restaurant_tittle">Quán ăn</string>

</resources>