<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.PRM391_Asm2.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/Widget.AppCompat.PopupMenu.Overflow" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingBottom="@dimen/iconPaddingLg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/iconPaddingLg">
            <ImageView
                android:layout_width="@dimen/main_image_size"
                android:layout_height="@dimen/main_image_size"
                android:scaleType="fitCenter"
                android:contentDescription="@string/hanoi_greeting"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/vietnam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/hanoi_greeting"
                android:textSize="@dimen/main_greeting_text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/iconPaddingLg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imb_hotel"
                        android:layout_margin="@dimen/iconPaddingLg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:layout_weight=".7"
                        android:src="@drawable/hotel"
                        android:contentDescription="@string/hotel_tittle" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hotel_tittle"
                        android:gravity="center"
                        android:textSize="@dimen/tittle_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imb_atm"
                        android:layout_margin="@dimen/iconPaddingLg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:layout_weight=".7"
                        android:src="@drawable/atm_machine"
                        android:contentDescription="@string/atm_tittle" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/atm_tittle"
                        android:gravity="center"
                        android:textSize="@dimen/tittle_text"/>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/imb_hospital"
                        android:layout_margin="@dimen/iconPaddingLg"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:layout_weight=".7"
                        android:src="@drawable/hospital"
                        android:contentDescription="@string/hospital_tittle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hospital_tittle"
                        android:gravity="center"
                        android:textSize="@dimen/tittle_text"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight=".5"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/imb_restaurant"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:scaleType="fitCenter"
                        android:background="@android:color/transparent"
                        android:layout_weight=".7"
                        android:src="@drawable/restaurant_dish"
                        android:contentDescription="@string/restaurant_tittle" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_tittle"
                        android:gravity="center"
                        android:textSize="@dimen/tittle_text"/>

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>